# nte-fishing

./: .gitignore  README.md  config.py  debug_run.py  main.py  nte-fishing.spec  pyproject.toml  requirements.txt  run.py  run_autostart.py  run_debug.py
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-25-nte-fishing-bot.md
docs/superpowers/specs/: 2026-04-25-nte-fishing-bot-design.md
src/: capture.py  controller.py  detector.py  input_inject.py  main.py  tray.py
tests/: test_capture.py  test_controller.py  test_detector.py
